--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/gabizinha12/nodejs-books-webapp#readme",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv-safe": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1"
   }
